<resources>
    <string name="app_name">ViewBinding</string>
    <string name="dhaliwal">Dhaliwal</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="i_accept_all_t_amp_c"><![CDATA[I accept all T&C]]></string>
    <string name="sign_up">Sign Up</string>
</resources>